tests/paczka2/big_fuzzy/53222590.err
Error in line 11: dFC S963 52,6
Error in line 12: zKXFgCi A898 25,4
Error in line 15: zKXFgCi S963 68,0
Error in line 13: gktahdMGun S13 90,2
Error in line 19: mRZhBj5Z A898 16,7
Error in line 9: S443 S443 85,7
Error in line 21: mRZhBj5Z S963 23,6
Error in line 18: HExwDu0i0Or S963 13,1
Error in line 23: S443 S963 19,6
Error in line 36: zKXFgCi S13 73,1
Error in line 43: dFC S963 66,0
Error in line 42: Fny9e4fXD A898 4,8
Error in line 59: gktahdMGun S963 56,8
Error in line 72: dFC S443 66,42
Error in line 76: gktahdMGun S443 90,4
Error in line 87: HExwDu0i0Or S963 49,2
Error in line 88: HExwDu0i0Or S443 5,6
Error in line 84: mRZhBj5Z S963 33,3
Error in line 93: HxwDu0i0Or S13 96,3
Error in line 82: dFC S443 101,3
Error in line 89: HExwDu0i0Or S13 49,0
Error in line 85: S443 S963 171,7
Error in line 111: S443 S13 15,3
Error in line 113: dFC A898 92,82
Error in line 105: HExwDu0i0Or A898 0,0
Error in line 121: zKXFgCi A898 12,2
Error in line 101: gktahdMGun A898 115,7
Error in line 115: dFC S443 35,3
Error in line 110: Fny9e4fXD S13 15,7
Error in line 140: dFC A898 55,0
Error in line 135: S443 A898 21,7
Error in line 141: zKXFgCi S963 31,4
Error in line 147: S443 S963 86,9
Error in line 148: dFC S13 365,0
Error in line 169: S443 S963 87,5
Error in line 170: S443 S443 12,2
Error in line 171: S443 S963 28,6
Error in line 176: HExwDu0i0Or S13 83,8
Error in line 174: zKXFgCi A898 74,8
Error in line 183: S443 S13 66,2
Error in line 200: HExwDu0i0Or S13 99,0
Error in line 206: Fny9e4fXD S13 91,3
Error in line 210: mRZhBj5Z S443 1,6
Error in line 214: dFC A898 39,2
Error in line 220: mRZhBj5Z S13 13,3
Error in line 217: S443 S13 21,7
Error in line 223: mRZhBj5Z A898 4,9
Error in line 239: dFC S443 66,3
Error in line 240: mRZhBj5Z S963 39,1
